fix word wrap for code

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -119,6 +119,10 @@ article ol {
   margin-block: 1lh;
 }
 
+p code {
+  @apply break-all;
+}
+
 .home article p:first-child {
   margin-top: 0;
 }
